<resources>
    <string name="app_name">Gooter Proyecto</string>
    <string name="back_button_desc">Botón de regreso</string>

    <!-- FECHA  -->
    <string name="hint_date">Date</string>
    <string name="select_report_date">Selecciona la fecha de inicio de tu reporte</string>
    <string name="select_report_date_final">Selecciona la fecha de final de tu reporte</string>
    <string name="next">Siguiente</string>

    <!-- MAPA PRINCIPAL  -->
    <string name="hello_user">Hola, usuario</string>
    <string name="trip_distance_time">🚲 0.9 Km • 6 Min</string>
    <string name="nearest_parking">Parqueadero más cercano a...</string>
    <string name="edit_location_desc">Editar ubicación</string>
    <string name="default_location_hint">Facultad de ciencias básicas</string>
    <string name="go_button">¡GO!</string>

    <!-- Pantalla de Login -->
    <string name="login_title">Ingreso de usuario</string>
    <string name="email_hint">Correo</string>
    <string name="password_hint">Contraseña</string>
    <string name="email_description">Ingrese su dirección de correo electrónico</string>
    <string name="password_description">Ingrese una contraseña</string>
    <string name="cancel_button">Cancelar</string>
    <string name="login_button">Ingresar</string>

    <!-- Home Screen -->
    <string name="home_logo">GoRace</string>
    <string name="join_community">haz parte de la comunidad hoy</string>
    <string name="daily_info">Información diaria ></string>
    <string name="race_with_friend">Carrera con Amigo</string>
    <string name="group_invitation">Invitación a Grupo</string>
    <string name="earned_points">Puntos Obtenidos</string>
    <string name="home_button">h</string>
    <string name="location_button">u</string>
    <string name="radio_button">u</string>
    <string name="notifications_button">u</string>
    <string name="profile_button">u</string>
    <string name="home_icon_desc">Icono de inicio</string>
    <string name="location_icon_desc">Icono de ubicación</string>
    <string name="radio_icon_desc">Icono de radio</string>
    <string name="notifications_icon_desc">Icono de notificaciones</string>
    <string name="profile_icon_desc">Icono de perfil</string>

    <!-- Pantalla de Estadisticas -->

    <string name="stats_title">Estadísticas de actividad física</string>
    <string name="stats_distance">234 Km</string>
    <string name="stats_summary">Recorridos en los últimos x días</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="suggestion_text"><b>Sugerencia:</b> Agita tu dispositivo para encontrar corredores cercanos</string>


    <!-- Pantalla de Crear Comunidad -->
    <string name="visibilidad">Visibilidad.\nNadie puede encontrar este grupo. Solo miembros pueden ver quién está en el grupo y lo que se postea en él.</string>
    <string name="crear_carrera">Crear Carrera</string>
    <string name="text_invitacion">Configura una nueva carrera e invita a tus amigos a participar</string>
    <string name="text_create">Crear Una Carrera</string>
    <string name="text_init_c">Iniciar Carrera</string>
    <string name="text_desc_init">Crea una nueva carrera o encuentra corredores\ncercanos para competir</string>

    <string name="text_invite_communities">Puedes invitar a estas comunidades a tu carrera:</string>
    <string name="text_create_race_title">Configurar Carrera</string>
    <string name="hint_destination">Ingresa ubicación o destino</string>
    <string name="desc_back_button">Botón de regreso</string>
    <string name="text_choose_destination_manually">O puedes escoger el destino de la carrera manualmente:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="disponibles_str">Jugadores Disponibles</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="notification_channel_name">Notificaciones</string>
    <string name="notification_channel_description">Notificaciones push de la aplicación</string>
    <string name="race_notification_channel_id">race_notifications</string>

</resources>
