<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EstadisticasFechaFinalActivity"
    android:background="#1C225D"
    android:padding="16dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_date"
        android:textColorHint="@color/white"
        app:boxStrokeColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/seleccionTexto"
        tools:layout_editor_absoluteX="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/dateInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_calendar"
            android:focusable="false"
            android:inputType="none"
            android:textColor="#FFFFFF"
            android:textColorLink="#FFFFFF" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/back_button_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_button" />

    <TextView
        android:id="@+id/seleccionTexto"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:fontFamily="@font/archivoblack"
        android:padding="16dp"
        android:text="@string/select_report_date_final"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toTopOf="@+id/siguiente"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/siguiente"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_marginBottom="64dp"
        android:backgroundTint="@color/white"
        android:text="@string/next"
        android:textColor="@color/blue_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
