<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/create_race_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/textfield_background"
    android:padding="16dp"
    tools:context=".CrearCarrerasActivity">

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#00FFFFFF"
        android:scaleType="centerCrop"
        android:src="@drawable/back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/desc_back_button" />

    <TextView
        android:id="@+id/text_view_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text_create_race_title"
        android:textSize="21sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonBack" />

    <EditText
        android:id="@+id/editTextDestination"
        android:layout_width="284dp"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rounded_edittext_background"
        android:hint="@string/hint_destination"
        android:inputType="textCapWords"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/buttonGo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_title" />

    <Button
        android:id="@+id/buttonGo"
        android:layout_width="86dp"
        android:layout_height="53dp"
        android:text="GO"
        android:backgroundTint="@color/blue_buttons"
        app:layout_constraintBottom_toBottomOf="@id/editTextDestination"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/editTextDestination"
        app:layout_constraintTop_toTopOf="@id/editTextDestination" />

    <TextView
        android:id="@+id/textViewSelectComunity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/text_invite_communities"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDestination" />

    <Button
        android:id="@+id/buttonIniciar"
        android:backgroundTint="@color/blue_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Iniciar"
        android:layout_marginStart="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/editTextDestination"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linear_layout_communities"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSelectComunity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvListaComunidades"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:scrollbars="horizontal"
            android:padding="8dp"/>
    </LinearLayout>

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrierBelowMutuallyExclusive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="buttonIniciar,linear_layout_communities" />

    <TextView
        android:id="@+id/text_view_choose_destination_manually"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/text_choose_destination_manually"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barrierBelowMutuallyExclusive" />

    <org.osmdroid.views.MapView
        android:id="@+id/osmMap"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_choose_destination_manually" />

</androidx.constraintlayout.widget.ConstraintLayout>